--- a/src/assets/Style/Login.css
+++ b/src/assets/Style/Login.css
@@ -1,4 +1,28 @@
 
 form{
     display: flex;
+    height: 400px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #4A4A4A;
 }
+
+
+input{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    left: 41%;
+
+
+
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: #4A4A4A;
+   
+  }
+
+
+  
