--- a/src/assets/Style/NuestraInfo.css
+++ b/src/assets/Style/NuestraInfo.css
@@ -62,6 +62,7 @@ padding-top: 380px;
     width:300px;
     height:300px;
     border-radius:150px;
+    margin-top: 9px;
   }
   .EMA{
     width:300px;
