--- a/src/assets/Style/Citas.css
+++ b/src/assets/Style/Citas.css
@@ -1,4 +1,13 @@
 
+.link1{
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: stretch;
+  justify-content: center;
+
+}
+
+
 form{
     display: flex;
     flex-direction: column;
