--- a/src/assets/Style/Login.css
+++ b/src/assets/Style/Login.css
@@ -1,76 +1,50 @@
 body{
     background-image: url('../IMG/Fondo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center
 }
-form{
-    background: rgba(0, 0, 0, 0.48);
-    padding: 20px;
-    width: 400px;
+.login-form {
+    max-width: 400px;
     margin: 0 auto;
-    margin-top: 7px;
-    margin-left: 280px;
-   
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    margin-top: 90px
   }
   
-  
-  form label {
-    display: block;
-    margin-bottom: 10px;
-    color: white;
-  }
-  
-  form input[type="text"],
-  form input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  h2 {
     margin-bottom: 20px;
   }
   
-  input[type="email"]{
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  .form-group {
     margin-bottom: 20px;
   }
-  form input[type="submit"] {
-    background-color: #4CAF50;
-    color: #fff;
+  
+  label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  input {
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  button {
+    padding: 10px;
+    background-color: #0066cc;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
   }
-  
-  form input[type="submit"]:hover {
-    background-color: #3e8e41;
-  }
-  
-  .boton {
-    background-color: #4CAF50; /* Color de fondo */
-    border: none; /* Borde */
-    color: white; /* Color de texto */
-    padding: 10px 20px; /* Espaciado */
-    text-align: center; /* Alineación de texto */
-    text-decoration: none; /* Decoración de texto */
-    display: inline-block; /* Mostrar como bloque en línea */
-    font-size: 16px; /* Tamaño de fuente */
-    margin: 10px 0; /* Margen superior e inferior */
-    border-radius: 4px; /* Radio de borde */
-    cursor: pointer; /* Tipo de cursor */
-  }
-  
-  /* Estilo de hover para el botón */
-  .boton:hover {
-    background-color: #3e8e41;
-  }
-  
-  .link{
-    color: white;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-  }
-  
   
